--- a/templates/test.html
+++ b/templates/test.html
@@ -6,7 +6,10 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="text/javascript" src="http://localhost:3000/main.bundle.js"></script>
-{#    <script type="text/javascript" src={{ url_for('static', filename="dist/main.bundle.js") }}></script>#}
+    {% if platform == 'nt' %}
+        <script type="text/javascript" src="http://localhost:3000/main.bundle.js"></script>
+    {% else %}
+        <script type="text/javascript" src={{ url_for('static', filename="dist/main.bundle.js") }}></script>
+    {% endif %}
 </body>
 </html>
