add router and navi and redux

--- a/templates/test.html
+++ b/templates/test.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>G68 APP</title>
+    <link href="{{ url_for('static', filename='g68-app.ico') }}" rel="icon">
 </head>
 <body>
     <div id="root"></div>
